aligning issues with list page

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -141,6 +141,7 @@ button:hover {
 .dashboard {
     text-align: center;
     margin-top: 150px;
+    margin-bottom: 100px;
 }
 
 .dashboard h1 {
